added google metatag

--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -5,6 +5,7 @@ html
         title OverMatch: Community-Driven Overwatch Stats
         meta(description="OverMatch is a community-driven meta-game for Blizzard's Overwatch.")
         meta(name="viewport", content="width=device-width, initial-scale=1")
+        meta(name="google-site-verification" content="tq4UXaCM5irprcpF-3u28PP18wUb_yThzygvjdlgV-I")
         link(rel="stylesheet", href="/stylesheets/rangeslider.css")
         link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Open+Sans")
