--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -178,8 +178,9 @@ p {
 	font-weight: bold;
 }
 
-.map-name {
-	color: orange;
+#graph-div {
+	/*background-color: grey;*/
+	padding: 20px;
 }
 
 .map-img img {
@@ -358,6 +359,11 @@ p {
 	display: none;
 }
 
+.loading img {
+	width:30px;
+	height: 10px;
+}
+
 #hero-stats-name {
 	font-family: OverMatch;
 	font-size: 50px;
@@ -503,10 +509,8 @@ p {
 	background-color: black;
 }
 
-.map-selected img {
-	-moz-box-shadow:  0 1px 5px rgba(113, 113, 113, 0.64);
- 	-webkit-box-shadow: 0 1px 5px rgba(113, 113, 113, 0.64);
-	box-shadow: 0 1px 5px rgba(113, 113, 113, 0.64);
+.map-selected {
+	color:orange;
 }
 
 .hero-dropdown-div, .map-dropdown-div {
@@ -536,6 +540,11 @@ p {
 	box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.46);
 }
 
+.days-select-top-div {
+	margin-bottom:10px;
+	font-size: 12px;
+}
+
 .hero-dropdown, .map-dropdown, .days-dropdown {
 	background: transparent;
     border-radius: 0px;
@@ -543,6 +552,17 @@ p {
     width: 75%;
     margin: 0 auto;
     border: 1px solid #777777;
+}
+
+
+#days-select-div {
+	top: -5px;
+}
+
+
+#days-selection {
+	width: 100%;
+	font-size: 12px;
 }
 
 .map-dropdown {
