--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,6 @@
  html {
  	height: 100%;
+ 	min-width: 400px;
  }
 
  body {
@@ -7,6 +8,7 @@
 	color: #FCF8E3;
 	font: 400 1em Helvetica,sans-serif;
 	text-shadow: 1px 1px 1px rgba(0,0,0,.5);
+	min-width: 400px;
 }
 
 p {
@@ -83,8 +85,12 @@ p {
 @media (min-width: 1200px) {
     .container{
         max-width: 1000px;
+
     }
 }
+
+
+
 
 .row {
 	padding: 10px 0;
