fixed question wording

--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -257,7 +257,7 @@ html
       
                     #beta.row.text-center
                         .col-xs-12
-                            p Overmatch currently in Beta. <strong> Results may be inaccurate</strong> until the site collects enough votes. Thank you for helping! 
+                            p Overmatch currently in Beta. <strong> Results may be inaccurate</strong> until the site collects enough votes. <br /><strong>The matchups and counters system is being reworked at the moment.</strong>
                     .row
                         .col-xs-0.col-md-2
                         #hero-stats-table.col-xs-12.col-md-8
