added all days to data. fixed socket problem

--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -226,12 +226,12 @@ html
             #hero-stats-title.row
                 .col-xs-0.col-md-3
                 #hero-stats-name.col-xs-12.col-md-6.text-center
-                #days-select-div.col-xs-12.col-md-3.map-dropdown-div.text-center
-                    .days-select-top-div
-                        p Include data from:
-                    select#days-selection.form-control.days-dropdown
-                        option(value="7") Last 7 days
-                        option(value="30" selected) Last 30 days
+                //- #days-select-div.col-xs-12.col-md-3.map-dropdown-div.text-center
+                //-     .days-select-top-div
+                //-         p Include data from:
+                //-     select#days-selection.form-control.days-dropdown
+                //-         option(value="7") Last 7 days
+                //-         option(value="30" selected) Last 30 days
 
             #hero-stats.row.text-center.soft-bg.shadow-top
 
